--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,10 @@ header {
 }
 /* * is known as Universal Selector */
 * {
-  box-sizing: border-box;
-  margin:0;
+  
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 header h1 {
@@ -40,4 +41,27 @@ header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
   font-size: 22px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fce138;
+  padding: 30px 35px;
+  width: 100%;
+}
+
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  line-height: 1.5;
+}
+
+footer a {
+  color: #024e76;
 }
